[tool.poetry]
name = "drone-visualize"
version = "0.1.0"
description = ""
authors = ["dcaustin33 <dcaustin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
opencv-python-headless = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
