[tool.poetry]
name = "drone-visualize"
version = "0.1.0"
description = ""
authors = ["dcaustin33 <dcaustin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
opencv-python-headless = "^4.10.0.84"
torch = "^2.4.1"
supervision = "^0.23.0"
torchvision = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
